# FreeStar

./: CMakeLists.txt  README.md  main.c  main.ll  makeIR.sh  updatePixels.h
cmake/: FindCSFML.cmake
lib/: Api.h  FreeStar.c  FreeStar.h
